--- a/public/html/index.html
+++ b/public/html/index.html
@@ -77,7 +77,7 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="../images/team-square.png">
             <h2 class="featurette-heading">This First Heading
                 <span class="text-muted">Will Catch Your Eye</span>
             </h2>
