--- a/public/html/index.html
+++ b/public/html/index.html
@@ -79,18 +79,19 @@
         <div class="featurette" id="about">
             <img class="featurette-image img-circle img-responsive pull-right" src="../images/screenshot-csp.png">
             <h2 class="featurette-heading">Project #1:
-                <span class="text-muted">www.coolstuffplus.com</span>
+                <span class="text-muted"><a href="http://www.coolstuffplus.com">www.coolstuffplus.com</a></span>
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="skills">html5 css3 jQuery responsive-design</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
-        <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left"   src="../images/team-square.png">
-            <h2 class="featurette-heading">The Second Heading
-                <span class="text-muted">Is Pretty Cool Too.</span>
+        <div class="featurette" id="contact">
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <h2 class="featurette-heading">Project #2:
+                <span class="text-muted">Will Seal the Deal.</span>
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
@@ -98,15 +99,18 @@
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
-        <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
-            <h2 class="featurette-heading">The Third Heading
-                <span class="text-muted">Will Seal the Deal.</span>
+        <div class="featurette" id="services">
+            <img class="featurette-image img-circle img-responsive pull-left"   src="../images/team-square.png">
+            <h2 class="featurette-heading">Project #3:
+                <span class="text-muted"><a href="http://crash.events">Reno Crash Events</a></span>
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="skills">JavaScript Google Maps API Git</p>
         </div>
 
         <hr class="featurette-divider">
+
+
 
         <!-- Footer -->
         <footer>
