--- a/public/html/index.html
+++ b/public/html/index.html
@@ -122,7 +122,7 @@
             </h2>
             <p class="lead">
                 I participated in Hack4Reno 2014, a hack-a-thon for civic projects in Reno, Nevada. With a team of developers, I helped create an interactive visualization of traffic accident data. Node.js, Ember.js, and SQL made up the tech stack for the project.
-                Our project won was chosen as the "Best Use of City Data".
+                Our project was chosen as the "Best Use of City Data".
             </p>
             <p class="skills"><span>JavaScript</span> <span>Google Maps API</span> <span>Git</span></p>
         </div>
