deleted unnecessary images

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -72,53 +72,12 @@
 
     <!-- Page Content -->
     <div class="container">
-
-        <!--<hr class="featurette-divider"  id="about">-->
-
-        <!--&lt;!&ndash; First Featurette &ndash;&gt;-->
-        <!--<div class="featurette">-->
-            <!--<img class="featurette-image img-circle img-responsive pull-right" src="../images/screenshot-csp.png">-->
-            <!--<p class="lead" >I am a web developer with a focus on JavaScript applications. In addition to CSS3 and HTML5 I am also familiar with Node.js, AngularJS Check out my resume: linkedIn.-->
-                             <!--Twitter. I has STEM degree. Familiar with git. Currently looking for employment in SF Bay Area.-->
-            <!--</p>-->
-        <!--</div>-->
-
         <hr class="featurette-divider"  id="portfolio">
-
-        <!-- First Featurette -->
-        <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-right" src="../images/quiz2.png">
-            <h2 class="featurette-heading">Project #1:
-                <span class="text-muted"><a href="http://unasquiz.herokuapp.com">Quiz App</a></span>
-            <a href="https://github.com/umgauper/JS_Quiz2"><img src="../images/GitHub-Mark-32px.png"></a>
-            </h2>
-            <p class="lead">
-                I developed this simple quiz application using MongoDB, Express, AngularJS, and Node.js (MEAN stack). Passport.js handles the user logins.
-            </p>
-            <p class="skills"> <span>MongoDB</span> <span>Express</span> <span>AngularJS</span> <span>Node.js</span></p>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <!-- Second Featurette -->
-        <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-left" src="../images/screenshot-csp.png">
-            <h2 class="featurette-heading">Project #2:
-                <span class="text-muted"><a href="http://www.coolstuffplus.com">Cool Stuff Plus</a></span>
-            <a href="https://github.com/umgauper/Cool-Stuff-Plus"><img src="../images/GitHub-Mark-32px.png"></a>
-            </h2>
-            <p class="lead"> I created this site for a client's small business.</p>
-            <p class="skills"><span>css3</span> <span>HTML5</span> <span>AngularJS</span> <span>jQuery</span> <span>responsive design</span></p>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <!-- Third Featurette -->
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-right"   src="../images/team-square.png">
-            <h2 class="featurette-heading">Project #3:
+            <h2 class="featurette-heading">Project #1:
                 <span class="text-muted"><a href="http://crash.events">Reno Crash Events</a></span>
-            <a href="https://github.com/crashevents/crash-events"><img src="../images/GitHub-Mark-32px.png"></a>
+                <a href="https://github.com/crashevents/crash-events"><img src="../images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead">
                 I participated in Hack4Reno 2014, a hack-a-thon for civic projects in Reno, Nevada. With a team of developers, I helped create an interactive visualization of traffic accident data. Node.js, Ember.js, and SQL made up the tech stack for the project.
@@ -126,20 +85,56 @@
             </p>
             <p class="skills"><span>JavaScript</span> <span>Google Maps API</span> <span>Git</span></p>
         </div>
+        <hr class="featurette-divider">
+
+        <!-- Second Featurette -->
+        <div class="featurette">
+            <img class="featurette-image img-circle img-responsive pull-left" src="../images/quiz3.png">
+            <h2 class="featurette-heading">Project #2:
+                <span class="text-muted"><a href="http://unasquiz.herokuapp.com">Quiz App</a></span>
+                <a href="https://github.com/umgauper/JS_Quiz2"><img src="../images/GitHub-Mark-32px.png"></a>
+            </h2>
+            <p class="lead">
+                I developed this simple quiz application with MongoDB, Express, AngularJS, and Node.js (MEAN stack). I used Passport.js to handle user signup and logins. At the end of the quiz, the user's scores are updated to a MongoDB database.
+            </p>
+            <p class="skills"> <span>MongoDB</span> <span>Express</span> <span>AngularJS</span> <span>Node.js</span></p>
+        </div>
+        <hr class="featurette-divider">
+
+        <!-- Third Featurette -->
+        <div class="featurette">
+            <img class="featurette-image img-circle img-responsive pull-right" src="../images/screenshot-csp.png">
+            <h2 class="featurette-heading">Project #3:
+                <span class="text-muted"><a href="http://www.coolstuffplus.com">Cool Stuff Plus</a></span>
+                <a href="https://github.com/umgauper/Cool-Stuff-Plus"><img src="../images/GitHub-Mark-32px.png"></a>
+            </h2>
+            <p class="lead"> I created this site for a client's small business.</p> <!-- add stuff re: struggles without bootstrap...GIMP..one of my first projects...etc?-->
+            <p class="skills"><span>css3</span> <span>HTML5</span> <span>AngularJS</span> <span>jQuery</span> <span>responsive design</span></p>
+        </div>
 
         <hr class="featurette-divider" id="contact">
-
         <!-- Contact -->
         <div class="featurette" class="contact">
-            <!--<img class="featurette-image img-circle img-responsive pull-left" src="../images/unave.jpg" width="300px" height="300px">-->
+            <img class="featurette-image img-circle img-responsive pull-left" src="../images/IMG_0185.JPG" width="300px" height="300px">
             <h2 class="featurette-heading">
                 <span>Contact Me:</span>
             </h2>
-            <h3><a href="mailto:umgauper@gmail.com">umgauper@gmail.com</a></h3>
-            <h3><a href="https://www.linkedin.com/pub/una-gauper/54/8a0/a82">LinkedIn</a></h3>
-            <h3><a href="https://twitter.com/umgauper">Twitter</a></h3>
-        </div>
 
+            <p class="lead" >I am a web developer with a focus on JavaScript applications. In addition to CSS3 and HTML5, I am also familiar with Node.js, AngularJS, MongoDB, and I have experience using Git on a greeam project. I am currently looking for work as a full-stack JavaScript developer in the San Francisco Bay Area.
+            </p>
+            <p class="skills info"> <!-- replace these with logos! use image sprites-->
+                <span>
+                    <a href="mailto:umgauper@gmail.com">umgauper@gmail.com</a>
+                </span>
+                <span>
+                    <a href="https://www.linkedin.com/pub/una-gauper/54/8a0/a82">LinkedIn</a>
+                </span>
+                <span>
+                    <a href="https://twitter.com/umgauper">Twitter</a>
+                </span>
+            </p>
+
+        </div>
         <hr class="featurette-divider">
         <!-- Footer -->
         <footer>
