added description to coolstuffplus and fixed error in About Me section

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -108,7 +108,8 @@
                 <span class="text-muted"><a href="http://www.coolstuffplus.com">Cool Stuff Plus</a></span>
                 <a href="https://github.com/umgauper/Cool-Stuff-Plus"><img src="../images/GitHub-Mark-32px.png"></a>
             </h2>
-            <p class="lead"> I created this site for a client's small business.</p> <!-- add stuff re: struggles without bootstrap...GIMP..one of my first projects...etc?-->
+            <p class="lead"> I created this site for a client's small business. I built the site without using Bootstrap in order to learn the ins and outs of CSS and HTML and responsive design. I used a little bit of jQuery and AngularJS to make the tabs.
+            </p> <!-- add stuff re: struggles without bootstrap...GIMP..one of my first projects...etc?-->
             <p class="skills"><span>css3</span> <span>HTML5</span> <span>AngularJS</span> <span>jQuery</span> <span>responsive design</span></p>
         </div>
 
@@ -120,7 +121,7 @@
                 <span>Contact Me:</span>
             </h2>
 
-            <p class="lead" >I am a web developer with a focus on JavaScript applications. In addition to CSS3 and HTML5, I am also familiar with Node.js, AngularJS, MongoDB, and I have experience using Git on a greeam project. I am currently looking for work as a full-stack JavaScript developer in the San Francisco Bay Area.
+            <p class="lead" >I am a web developer with a focus on JavaScript applications. In addition to CSS3 and HTML5, I am also familiar with Node.js, AngularJS, MongoDB, and I have experience using Git on a team project. I am currently looking for work as a full-stack JavaScript developer in Sacramento or the San Francisco Bay Area.
             </p>
             <p class="skills info"> <!-- replace these with logos! use image sprites-->
                 <span>
