updated link to cool stuff plus

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -105,7 +105,7 @@
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-right" src="../images/screenshot-csp.png">
             <h2 class="featurette-heading">Project #3:
-                <span class="text-muted"><a href="https://github.com/umgauper/unagauper.git">Cool Stuff Plus</a></span>
+                <span class="text-muted"><a href="http://umgauper.github.io/">Cool Stuff Plus</a></span>
                 <a href="https://github.com/umgauper/Cool-Stuff-Plus"><img src="../images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead"> I created this site for a client's small business. I built the site without using Bootstrap in order to learn the ins and outs of CSS and HTML and responsive design. I used a little bit of jQuery and AngularJS to make the tabs.
