--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <title>Una Gauper</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="public/stylesheets/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../stylesheets/one-page-wonder.css" rel="stylesheet">
-    <link href="../stylesheets/style.css" rel="stylesheet">
+    <link href="public/stylesheets/one-page-wonder.css" rel="stylesheet">
+    <link href="public/stylesheets/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -74,21 +74,21 @@
     <div class="container">
         <div class="social-media-buttons">
             <div class="col-lg-1 col-lg-offset-3">
-                <a href="https://twitter.com/umgauper"><button class="btn btn-lg"><p>Twitter</p><img class="icon" src="../images/twitter3.png"></button></a>
+                <a href="https://twitter.com/umgauper"><button class="btn btn-lg"><p>Twitter</p><img class="icon" src="public/images/twitter3.png"></button></a>
             </div>
             <div class="col-lg-1 col-lg-offset-1">
-                <a href="https://github.com/umgauper"><button class="btn btn-lg"><p>Github</p><img class="icon" src="../images/github_icon.png"></button></a>
+                <a href="https://github.com/umgauper"><button class="btn btn-lg"><p>Github</p><img class="icon" src="public/images/github_icon.png"></button></a>
             </div>
             <div class="col-lg-1 col-lg-offset-1">
-                <a href="https://www.linkedin.com/pub/una-gauper/54/8a0/a82"><button class="btn btn-lg"><p>LinkedIn</p><img class="icon" src="../images/LinkedIn_Icon.png"></button></a>
+                <a href="https://www.linkedin.com/pub/una-gauper/54/8a0/a82"><button class="btn btn-lg"><p>LinkedIn</p><img class="icon" src="public/images/LinkedIn_Icon.png"></button></a>
             </div>
         </div>
         <hr class="featurette-divider" id="portfolio">
         <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-right"   src="../images/team-square.png">
+            <img class="featurette-image img-circle img-responsive pull-right"   src="public/images/team-square.png">
             <h2 class="featurette-heading">Team Project:
                 <span class="text-muted"><a href="http://crash.events">Reno Crash Events</a></span>
-                <a href="https://github.com/crashevents/crash-events"><img src="../images/GitHub-Mark-32px.png"></a>
+                <a href="https://github.com/crashevents/crash-events"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead">
                 I participated in Hack4Reno 2014, a hack-a-thon for civic projects in Reno, Nevada. With a team of developers, I helped create an interactive visualization of traffic accident data. Node.js, Ember.js, and SQL made up the tech stack for the project.
@@ -99,10 +99,10 @@
         <hr class="featurette-divider">
 
         <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-left" src="../images/quiz3.png">
+            <img class="featurette-image img-circle img-responsive pull-left" src="public/images/quiz3.png">
             <h2 class="featurette-heading">Project #1:
                 <span class="text-muted"><a href="http://unasquiz.herokuapp.com">Quiz App</a></span>
-                <a href="https://github.com/umgauper/JS_Quiz2"><img src="../images/GitHub-Mark-32px.png"></a>
+                <a href="https://github.com/umgauper/JS_Quiz2"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead">
                 I developed this quiz application with MongoDB, Express, AngularJS, and Node.js (MEAN stack). I used Passport.js to handle user signup and logins. At the end of the quiz, the user's scores are updated to a MongoDB database.
@@ -115,10 +115,10 @@
         <hr class="featurette-divider">
 
         <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-right" src="../images/votingapp.png">
+            <img class="featurette-image img-circle img-responsive pull-right" src="public/images/votingapp.png">
             <h2 class="featurette-heading">Project #2:
                 <span class="text-muted"><a href="https://votingapp.herokuapp.com">Voting</a></span>
-                <a href="https://github.com/umgauper/voting"><img src="../images/GitHub-Mark-32px.png"></a>
+                <a href="https://github.com/umgauper/voting"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead">
                 Users create polls with options that other users can vote on. Each user can view the results of his/her polls in a graph. I created the charts using the angular-chart.js library.
@@ -128,10 +128,10 @@
         <hr class="featurette-divider">
 
         <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-left" src="../images/sociallife.png">
+            <img class="featurette-image img-circle img-responsive pull-left" src="public/images/sociallife.png">
             <h2 class="featurette-heading">Project #3:
                 <span class="text-muted"><a href="http://secure-forest-9354.herokuapp.com/">Social Life</a></span>
-                <a href="https://github.com/umgauper/sociallife"><img src="../images/GitHub-Mark-32px.png"></a>
+                <a href="https://github.com/umgauper/sociallife"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead">
                 Users can search for the bars in their city, then add themselves to a bar and see how many other people are going to the bar. This app uses the Yelp API to return the list of bars in a particular city.
@@ -141,10 +141,10 @@
         <hr class="featurette-divider">
 
         <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-right" src="../images/bookoutpost.png">
+            <img class="featurette-image img-circle img-responsive pull-right" src="public/images/bookoutpost.png">
             <h2 class="featurette-heading">Project #4:
                 <span class="text-muted"><a href="https://fast-basin-2346.herokuapp.com/">Book Outpost</a></span>
-                <a href="https://github.com/umgauper/bookswap"><img src="../images/GitHub-Mark-32px.png"></a>
+                <a href="https://github.com/umgauper/bookswap"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead">Users post the books they own and a cover of the book is added to their virtual bookshelf. Users can then propose a trade with another user.
             </p>
@@ -153,10 +153,10 @@
         <hr class="featurette-divider">
 
         <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-left" src="../images/stockjump.png">
+            <img class="featurette-image img-circle img-responsive pull-left" src="public/images/stockjump.png">
             <h2 class="featurette-heading">Project #5:
                 <span class="text-muted"><a href="http://sheltered-sands-1839.herokuapp.com/">Stock Jump</a></span>
-                <a href="https://github.com/umgauper/stockjump"><img src="../images/GitHub-Mark-32px.png"></a>
+                <a href="https://github.com/umgauper/stockjump"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead">
                 The user enters a stock symbol and a chart updates to show the line graph of the stock entered. The stock data is retrieved via the Yahoo Finance API. The chart is rendered with the highcharts.js library.
@@ -166,10 +166,10 @@
         <hr class="featurette-divider">
 
         <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-right" src="../images/linkterest.png">
+            <img class="featurette-image img-circle img-responsive pull-right" src="public/images/linkterest.png">
             <h2 class="featurette-heading">Project #6:
                 <span class="text-muted"><a href="https://fathomless-island-5214.herokuapp.com/">Linkterest</a></span>
-                <a href="https://github.com/umgauper/linkterest"><img src="../images/GitHub-Mark-32px.png"></a>
+                <a href="https://github.com/umgauper/linkterest"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead">
                 Users can add and delete images that are then displayed in a pinterest style grid.
@@ -180,7 +180,7 @@
         <hr class="featurette-divider" id="contact">
         <!-- Contact -->
         <div class="featurette" class="contact">
-            <img class="featurette-image img-circle img-responsive pull-left" src="../images/IMG_0185.JPG" width="300px" height="300px">
+            <img class="featurette-image img-circle img-responsive pull-left" src="public/images/IMG_0185.JPG" width="300px" height="300px">
             <h2 class="featurette-heading">
                 <span>Contact Me:</span>
             </h2>
@@ -204,10 +204,10 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="../javascripts/jquery.js"></script>
+    <script src="public/javascripts/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../javascripts/bootstrap.min.js"></script>
+    <script src="public/javascripts/bootstrap.min.js"></script>
 
 </body>
 
