changed broken link to crash.events to devpost

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-right"   src="public/images/team-square.png">
             <h2 class="featurette-heading">Team Project:
-                <span class="text-muted"><a href="http://crash.events">Reno Crash Events</a></span>
+                <span class="text-muted"><a href="http://devpost.com/software/reno-crash-events">Reno Crash Events</a></span>
                 <a href="https://github.com/crashevents/crash-events"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
             <p class="lead">
