added usda project

--- a/index.html
+++ b/index.html
@@ -110,13 +110,26 @@
             <p class="skills"> <span>MongoDB</span> <span>Express</span> <span>AngularJS</span> <span>Node.js</span></p>
         </div>
         <hr class="featurette-divider">
+       <div class="featurette">
+        <img class="featurette-image img-circle img-responsive pull-right" src="public/images/usdaUX.png">
+        <h2 class="featurette-heading">Project #2:
+            <span class="text-muted"><a href="https://protected-waters-45009.herokuapp.com">Interactive Form</a></span>
+            <a href="https://github.com/umgauper/USDA-UX-Challenge"><img src="public/images/GitHub-Mark-32px.png"></a>
+        </h2>
+        <p class="lead">
+            I developed this interactive USDA form for the free school lunch program as part of a hackathon challenge. The form has error input validation. I built the form with React and used a Redux architecture to handle the form data.
+        </p>
+        <p class="skills"> <span>React</span> <span>Redux</span> <span>Node.js</span></p>
+        </div>
+
+        <hr class="featurette-divider">
 
         <p class="lead"><b><i>Full stack projects: </i></b><i>I built each of the following MEAN (MongoDB, Express, Angular, Node.js) stack projects starting with a yeoman-generated angular-fullstack app. I used grunt and bower during the development of each project. All of the projects were reverse engineered from a pre-existing app as part of the Free Code Camp curriculum.</i></p>
         <hr class="featurette-divider">
 
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-right" src="public/images/votingapp.png">
-            <h2 class="featurette-heading">Project #2:
+            <h2 class="featurette-heading">Project #3:
                 <span class="text-muted"><a href="https://votingapp.herokuapp.com">Voting</a></span>
                 <a href="https://github.com/umgauper/voting"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
@@ -128,8 +141,8 @@
         <hr class="featurette-divider">
 
         <div class="featurette">
-            <img class="featurette-image img-circle img-responsive pull-right" src="public/images/bookoutpost.png">
-            <h2 class="featurette-heading">Project #3:
+            <img class="featurette-image img-circle img-responsive pull-left" src="public/images/bookoutpost.png">
+            <h2 class="featurette-heading">Project #4:
                 <span class="text-muted"><a href="https://fast-basin-2346.herokuapp.com/">Book Outpost</a></span>
                 <a href="https://github.com/umgauper/bookswap"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
@@ -141,7 +154,7 @@
 
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-right" src="public/images/linkterest.png">
-            <h2 class="featurette-heading">Project #4:
+            <h2 class="featurette-heading">Project #5:
                 <span class="text-muted"><a href="https://fathomless-island-5214.herokuapp.com/">Linkterest</a></span>
                 <a href="https://github.com/umgauper/linkterest"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
@@ -161,7 +174,7 @@
 
             <p class="lead" >I am a JavaScript developer with experience using object-oriented JavaScript programming patterns, writing RESTful APIs,
                 building software in a team environment using Git, and writing HTML5 and CSS3 that conforms to the latest web standards. As evidenced by my portfolio, I have built several projects with
-                MongoDB, Angular.js, Express, and Node.js. I am looking for an entry-level JavaScript developer position. You can contact me at <a href="mailto:umgauper@gmail.com">umgauper@gmail.com</a>,
+                MongoDB, Angular.js, Express, and Node.js. I am looking for a JavaScript developer position. You can contact me at <a href="mailto:umgauper@gmail.com">umgauper@gmail.com</a>,
                 or via my <a href="https://www.linkedin.com/pub/una-gauper/54/8a0/a82">LinkedIn</a> profile or <a href="https://twitter.com/umgauper">Twitter</a>.
             </p>
         </div>
